tests/snapshots/parser__object_literal__empty.snap
---
source: tests/parser.rs
expression: "parse(\"var u = {}\")"
---
Ok(
    [
        Var {
            name: "u",
            value: Object {
                entries: [],
                span: Span {
                    start: 8,
                    end: 10,
                },
            },
            span: Span {
                start: 0,
                end: 10,
            },
        },
    ],
)
