tests/snapshots/parser__object_literal__extended_ident_key.snap
---
source: tests/parser.rs
expression: "parse(r#\"var u = {@first-name: \"Ana\"}\"#)"
---
Ok(
    [
        Var {
            name: "u",
            value: Object {
                entries: [
                    (
                        "first-name",
                        String(
                            "Ana",
                            Span {
                                start: 22,
                                end: 27,
                            },
                        ),
                    ),
                ],
                span: Span {
                    start: 8,
                    end: 28,
                },
            },
            span: Span {
                start: 0,
                end: 28,
            },
        },
    ],
)
