tests/snapshots/parser__object_literal__mixed_keys.snap
---
source: tests/parser.rs
expression: "parse(r#\"var u = {name: \"Ana\", @first-name: \"A\", \"last-name\": \"B\"}\"#)"
---
Ok(
    [
        Var {
            name: "u",
            value: Object {
                entries: [
                    (
                        "name",
                        String(
                            "Ana",
                            Span {
                                start: 15,
                                end: 20,
                            },
                        ),
                    ),
                    (
                        "first-name",
                        String(
                            "A",
                            Span {
                                start: 35,
                                end: 38,
                            },
                        ),
                    ),
                    (
                        "last-name",
                        String(
                            "B",
                            Span {
                                start: 53,
                                end: 56,
                            },
                        ),
                    ),
                ],
                span: Span {
                    start: 8,
                    end: 57,
                },
            },
            span: Span {
                start: 0,
                end: 57,
            },
        },
    ],
)
