tests/snapshots/parser__object_literal__nested.snap
---
source: tests/parser.rs
expression: "parse(r#\"var u = {a: {b: 1}, c: [1, 2]}\"#)"
---
Ok(
    [
        Var {
            name: "u",
            value: Object {
                entries: [
                    (
                        "a",
                        Object {
                            entries: [
                                (
                                    "b",
                                    Int(
                                        1,
                                        Span {
                                            start: 16,
                                            end: 17,
                                        },
                                    ),
                                ),
                            ],
                            span: Span {
                                start: 12,
                                end: 18,
                            },
                        },
                    ),
                    (
                        "c",
                        List {
                            items: [
                                Int(
                                    1,
                                    Span {
                                        start: 24,
                                        end: 25,
                                    },
                                ),
                                Int(
                                    2,
                                    Span {
                                        start: 27,
                                        end: 28,
                                    },
                                ),
                            ],
                            span: Span {
                                start: 23,
                                end: 29,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 8,
                    end: 30,
                },
            },
            span: Span {
                start: 0,
                end: 30,
            },
        },
    ],
)
