tests/snapshots/parser__object_literal__statement_position_block_with_identifier.snap
---
source: tests/parser.rs
expression: "parse(\"{ x }\")"
---
Ok(
    [
        Block {
            stmts: [
                Expr(
                    Identifier(
                        "x",
                        Span {
                            start: 2,
                            end: 3,
                        },
                    ),
                ),
            ],
            span: Span {
                start: 0,
                end: 5,
            },
        },
    ],
)
