tests/snapshots/parser__object_literal__unclosed_is_error.snap
---
source: tests/parser.rs
expression: "parse(\"var u = {a: 1\")"
---
Err(
    ParseError {
        message: "expected expression after `=`: expected `,` or `}`, found Eof",
        span: Span {
            start: 13,
            end: 13,
        },
    },
)
